[metadata]
name = aiostem
version = 0.2.6
author = Romain Bezut
author_email = morian@xdec.net
license = MIT
license_file = LICENSE
description = Asynchronous Tor controller library for asyncio and Python
long_description = file: README.md
long_description_content_type = text/markdown
platforms = any
classifiers =
	OSI Approved :: MIT License
	Operating System :: POSIX :: Linux
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10

[options]
install_requires =
	aiofiles
	setuptools
	stem >= 1.8.0
packages = find:
scripts =
	bin/aiostem-hsscan

[options.packages.find]
exclude = test

[options.package_data]
aiostem =
	py.typed

[tool:pytest]
asyncio_mode = auto

[flake8]
exclude =
	build/
	debian/
	dist/
	*.egg-info/
	venv/
extend-ignore = E203  # Whitespace before ':'
max-line-length = 95
max-complexity = 15
inline-quotes = single
multiline-quotes = double
show-source = True
statistics = True

[coverage:run]
branch = True

[coverage:report]
precision = 2
exclude_lines =
	raise NotImplementedError
	if TYPE_CHECKING:

[coverage:paths]
source =
	aiostem/
	bin/

[pydocstyle]
ignore =
	D100,  # Missing docstring in public module
	D104,  # Missing docstring in public package
	D203,  # 1 blank line required before class docstring
	D213,  # Multi-line docstring summary should start at the second line

[isort]
line_length = 95
known_first_party = aiostem
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0

[mypy]
python_version = 3.7
namespace_packages = True
explicit_package_bases = True
show_error_codes = True
follow_imports = silent
strict_optional = True
warn_redundant_casts = True
warn_unused_ignores = False
disallow_any_generics = True
check_untyped_defs = True
no_implicit_reexport = False
warn_unused_configs = True
disallow_subclassing_any = True
disallow_incomplete_defs = True
disallow_untyped_decorators = True
disallow_untyped_calls = True
disallow_untyped_defs = True
