[metadata]
name = aiostem
version = 0.2.8
author = Romain Bezut
author_email = morian@xdec.net
license = MIT
license_file = LICENSE
description = Asynchronous Tor controller library for asyncio and Python
long_description = file: README.md
long_description_content_type = text/markdown
platforms = any
classifiers =
	License :: OSI Approved :: MIT License
	Operating System :: POSIX :: Linux
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: 3.12

[options]
install_requires =
	aiofiles
	setuptools
	stem >= 1.8.0
packages = find:
scripts =
	bin/aiostem-hsscan

[options.packages.find]
exclude = test

[options.package_data]
aiostem =
	py.typed
